--- a/service.html
+++ b/service.html
@@ -219,71 +219,20 @@
                     <div class="portfolio-wrapper">   
                         <div class="portfolio-single">
                             <div class="portfolio-thumb">
-                                <img src="images/portfolio/logo.png" class="img-responsive" alt="">
+                                <img src="images/portfolio/posterrr.jpg" class="img-responsive" alt="">
                             </div>
                             <div class="portfolio-view">
                                 <ul class="nav nav-pills">
-                                    <li><a href="images/portfolio/logo.png" data-lightbox="example-set"><i class="fa fa-eye"></i></a></li>
+                                    <li><a href="images/portfolio/posterrr.jpg" data-lightbox="example-set"><i class="fa fa-eye"></i></a></li>
                                 </ul>
                             </div>
                         </div>
                         <div class="portfolio-info">
-                            <h2>Logo Design</h2>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-sm-3 col-xs-6 wow fadeIn" data-wow-duration="1000ms" data-wow-delay="400ms">
-                    <div class="portfolio-wrapper">   
-                        <div class="portfolio-single">
-                            <div class="portfolio-thumb">
-                                <img src="images/portfolio/webdesign.jpg" class="img-responsive" alt="">
-                            </div>
-                            <div class="portfolio-view">
-                                <ul class="nav nav-pills">
-                                    <li><a href="images/portfolio/webdesign.jpg" data-lightbox="example-set"><i class="fa fa-eye"></i></a></li>
-                                </ul>
-                            </div>
-                        </div>
-                        <div class="portfolio-info">
-                            <h2>Web Design</h2>
+                            <h2>Poster Design</h2>
                         </div>
                     </div>
                 </div>
                
-                <div class="col-sm-3 col-xs-6 wow fadeIn" data-wow-duration="1000ms" data-wow-delay="700ms">
-                    <div class="portfolio-wrapper">   
-                        <div class="portfolio-single">
-                            <div class="portfolio-thumb">
-                                <img src="images/portfolio/businesscard.png" class="img-responsive" alt="">
-                            </div>
-                            <div class="portfolio-view">
-                                <ul class="nav nav-pills">
-                                    <li><a href="images/portfolio/businesscard.png" data-lightbox="example-set"><i class="fa fa-eye"></i></a></li>
-                                </ul>
-                            </div>
-                        </div>
-                        <div class="portfolio-info">
-                            <h2>Business Card Design</h2>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-sm-3 col-xs-6 wow fadeIn" data-wow-duration="1000ms" data-wow-delay="800ms">
-                    <div class="portfolio-wrapper">   
-                        <div class="portfolio-single">
-                            <div class="portfolio-thumb">
-                                <img src="images/portfolio/envelopes.png" class="img-responsive" alt="">
-                            </div>
-                            <div class="portfolio-view">
-                                <ul class="nav nav-pills">
-                                    <li><a href="images/portfolio/envelopes.png" data-lightbox="example-set"><i class="fa fa-eye"></i></a></li>
-                                </ul>
-                            </div>
-                        </div>
-                        <div class="portfolio-info">
-                            <h2>Envelope Design</h2>
-                        </div>
-                    </div>
-                </div>
                 <div class="col-sm-3 col-xs-6 wow fadeIn" data-wow-duration="1000ms" data-wow-delay="900ms">
                     <div class="portfolio-wrapper">   
                         <div class="portfolio-single">
@@ -301,7 +250,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-3 col-xs-6 wow fadeIn" data-wow-duration="1000ms" data-wow-delay="1000ms">
+
+                <div class="col-sm-3 col-xs-6 wow fadeIn" data-wow-duration="1000ms" data-wow-delay="800ms">
                     <div class="portfolio-wrapper">   
                         <div class="portfolio-single">
                             <div class="portfolio-thumb">
@@ -310,6 +260,23 @@
                             <div class="portfolio-view">
                                 <ul class="nav nav-pills">
                                     <li><a href="images/portfolio/posster.jpg" data-lightbox="example-set"><i class="fa fa-eye"></i></a></li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="portfolio-info">
+                            <h2>Poster Design</h2>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-3 col-xs-6 wow fadeIn" data-wow-duration="1000ms" data-wow-delay="1000ms">
+                    <div class="portfolio-wrapper">   
+                        <div class="portfolio-single">
+                            <div class="portfolio-thumb">
+                                <img src="images/portfolio/pandoraadport.png" class="img-responsive" alt="">
+                            </div>
+                            <div class="portfolio-view">
+                                <ul class="nav nav-pills">
+                                    <li><a href="images/portfolio/pandoraadport.png" data-lightbox="example-set"><i class="fa fa-eye"></i></a></li>
                                 </ul>
                             </div>
                         </div>
