--- a/service.html
+++ b/service.html
@@ -219,11 +219,11 @@
                     <div class="portfolio-wrapper">   
                         <div class="portfolio-single">
                             <div class="portfolio-thumb">
-                                <img src="images/portfolio/posterrr.jpg" class="img-responsive" alt="">
+                                <img src="images/portfolio/postur.jpg" class="img-responsive" alt="">
                             </div>
                             <div class="portfolio-view">
                                 <ul class="nav nav-pills">
-                                    <li><a href="images/portfolio/posterrr.jpg" data-lightbox="example-set"><i class="fa fa-eye"></i></a></li>
+                                    <li><a href="images/portfolio/postur.jpg" data-lightbox="example-set"><i class="fa fa-eye"></i></a></li>
                                 </ul>
                             </div>
                         </div>
@@ -237,54 +237,21 @@
                     <div class="portfolio-wrapper">   
                         <div class="portfolio-single">
                             <div class="portfolio-thumb">
-                                <img src="images/portfolio/flyer.jpg" class="img-responsive" alt="">
+                                <img src="images/portfolio/otrologo.jpg" class="img-responsive" alt="">
                             </div>
                             <div class="portfolio-view">
                                 <ul class="nav nav-pills">
-                                    <li><a href="images/portfolio/flyer.jpg" data-lightbox="example-set"><i class="fa fa-eye"></i></a></li>
+                                    <li><a href="images/portfolio/otrologo.jpg" data-lightbox="example-set"><i class="fa fa-eye"></i></a></li>
                                 </ul>
                             </div>
                         </div>
                         <div class="portfolio-info">
-                            <h2>Flyer Design</h2>
+                            <h2>Business Card</h2>
                         </div>
                     </div>
                 </div>
 
-                <div class="col-sm-3 col-xs-6 wow fadeIn" data-wow-duration="1000ms" data-wow-delay="800ms">
-                    <div class="portfolio-wrapper">   
-                        <div class="portfolio-single">
-                            <div class="portfolio-thumb">
-                                <img src="images/portfolio/posster.jpg" class="img-responsive" alt="">
-                            </div>
-                            <div class="portfolio-view">
-                                <ul class="nav nav-pills">
-                                    <li><a href="images/portfolio/posster.jpg" data-lightbox="example-set"><i class="fa fa-eye"></i></a></li>
-                                </ul>
-                            </div>
-                        </div>
-                        <div class="portfolio-info">
-                            <h2>Poster Design</h2>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-sm-3 col-xs-6 wow fadeIn" data-wow-duration="1000ms" data-wow-delay="1000ms">
-                    <div class="portfolio-wrapper">   
-                        <div class="portfolio-single">
-                            <div class="portfolio-thumb">
-                                <img src="images/portfolio/pandoraadport.png" class="img-responsive" alt="">
-                            </div>
-                            <div class="portfolio-view">
-                                <ul class="nav nav-pills">
-                                    <li><a href="images/portfolio/pandoraadport.png" data-lightbox="example-set"><i class="fa fa-eye"></i></a></li>
-                                </ul>
-                            </div>
-                        </div>
-                        <div class="portfolio-info">
-                            <h2>Poster Design</h2>
-                        </div>
-                    </div>
-                </div>
+               
             </div>
         </div>
     </section>
@@ -308,10 +275,10 @@
                             <a href="#"><img src="images/home/client2.png" class="img-responsive" alt=""></a>
                         </div>
                          <div class="col-xs-3 col-sm-2">
-                            <a href="#"><img src="images/home/client3.png" class="img-responsive" alt=""></a>
+                            <a href="#"><img src="images/home/798arona.png" class="img-responsive" alt=""></a>
                         </div>
                          <div class="col-xs-3 col-sm-2">
-                            <a href="#"><img src="images/home/client4.png" class="img-responsive" alt=""></a>
+                            <a href="#"><img src="images/home/ime.png" class="img-responsive" alt=""></a>
                         </div>
                          <div class="col-xs-3 col-sm-2">
                             <a href="#"><img src="images/home/client5.png" class="img-responsive" alt=""></a>
